# datathon-mle

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  config_20250518_164922.yaml  main.py  pyproject.toml
api/: Dockerfile  main.py  pyproject.toml
api/controllers/: model_controller.py
api/src/: old-setup.py  utils.py
docs/: data_dictionary_template.md  decisoes_feature_engineering_modelagem.md  planejamento_projeto.md  tasks.md
front/: app.py
infra/: docker-compose.yaml
infra copy/: docker-compose.yaml
infra copy/volumes/grafana/var/: grafana.db
infra copy/volumes/mlflow/sqlite/: mlflow.db
infra/airflow/dags/: db_decision.tb_history_applicants.py  db_decision.tb_history_prospects.py  db_decision.tb_history_vagas.py
infra/terraform/: backend.tf  ec2.tf  ec2_userdata.sh  elb.tf  iam.tf  lambda.tf  s3.tf  sqs.tf  variables.tf  vpc.tf
infra/volumes/grafana/var/: grafana.db
infra/volumes/mlflow/sqlite/: mlflow.db
infra/volumes/prometheus/: prometheus.yaml
lambdas/process_decision_file_lambda/: lambda_function.py
lambdas/process_live_lambda/: lambda_function.py
mlruns/0/: meta.yaml
notebooks/: 00_pipeline.ipynb  01_exploratoria.ipynb  02_simulacao_inferencia.ipynb  02_simulação_inferencia.ipynb  04_simulação_inferencia.ipynb  LIME_and_SHAP.ipynb  colunas_valores_ausentes.ipynb
packages_src/mle_datathon/: pyproject.toml
packages_src/mle_datathon/source_files/: bentofile.yaml  db_mgmt.py  definir_target.py  eda.py  model_mgmt.py  preprocess_data.py  save_model.py
packages_src/mle_datathon/src/mle_datathon/api_settings/: __init__.py  settings.py
packages_src/mle_datathon/src/mle_datathon/data_processing/: __init__.py  consolidar_dados.py  definir_target.py  feature_engineering.py  preprocess_data.py
packages_src/mle_datathon/src/mle_datathon/model/: __init__.py  registry.py  train_model.py  tune_model.py
packages_src/mle_datathon/src/mle_datathon/utils/: __init__.py  logger.py  utils.py
resources/torchrec/: candidate_id_mapping.pkl  candidate_idx_to_id.pkl  job_id_mapping.pkl  job_idx_to_id.pkl  test_df.pkl  train_df.pkl
scripts/: convert_kaggle.py  initialize_data.sh  topk.py
src/: check_data_quality.py  compare_feature_importance.py  config.py  consolidar_dados.py  db_mgmt.py  definir_target.py  eda.py  feature_engineering.py  generate_data_dictionary.py  log_config.py  logger_config.py  model_mgmt.py  preprocess_data.py  save_model.py  service.py  torch_rec_model.py  torch_rec_model.py.bak  torch_rec_model_data.py  train_model.py  tune_model.py
src/datathon_mle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py  test_consolidar_dados.py  test_definir_target.py  test_feature_engineering.py  test_preprocess_data.py  test_train_model.py
