[project]
name = "datathon-mle"
version = "0.1.0"
description = "Projeto fase 5 da pós tech"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lime>=0.2.0.1",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "pandera>=0.23.1",
    "polars>=1.22.0",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools>=78.1.0",
    "shap>=0.47.1",
    "sweetviz>=2.3.1",
    "unidecode>=1.3.8",
    "ydata-profiling>=4.12.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "nbconvert>=7.16.6",
    "pre-commit>=4.1.0",
]
